# flatstall

./: Cargo.toml  README.md  flatstall.spec  meson.build
data/: dev.bedsteler20.Flatstall.in.desktop  dev.bedsteler20.Flatstall.in.metainfo.xml  meson.build
po/: POTFILES  meson.build
src/: main.rs  meson.build  ref_file.rs  spawn_app.rs  transaction.rs  ui.rs  window.blp
