[package]
name = "flatstall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["gtk_v4_10", "v1_4"] }
flatpak = { version = "0.4.0", package = "libflatpak" }
gtk = { version = "0.7.3", package = "gtk4", features = ["gnome_45", "blueprint"] }
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
rust-ini = "0.20.0"
serde = "1.0.193"
serde_json = "1.0.108"
