desktop_file = i18n.merge_file(
        input: 'dev.bedsteler20.Flatstall.in.desktop',
       output: 'dev.bedsteler20.Flatstall.desktop',
         type: 'desktop',
       po_dir: '../po',
      install: true,
  install_dir: get_option('datadir') / 'applications'
)

appstream_file = i18n.merge_file(
        input: 'dev.bedsteler20.Flatstall.in.metainfo.xml',
       output: 'dev.bedsteler20.Flatstall.metainfo.xml',
       po_dir: '../po',
      install: true,
  install_dir: get_option('datadir') / 'metainfo'
)

